export const snapshot = {};

snapshot[`cli - "molt" 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules and configuration files

Options:

  -h, --help                       - Show this help.                                                                         
  -v, --version                    - Print version info                                                                      
  -w, --write                      - Write changes to local files                        (Conflicts: --commit)               
  -c, --commit                     - Commit changes to local git repository              (Conflicts: --write)                
  --changelog      [commit_types]  - Show a curated changelog for each update                                                
  --debug                          - Print debug information                                                                 
  --import-map     <file>          - Specify import map file                                                                 
  --ignore         <deps>          - Ignore dependencies                                                                     
  --no-resolve                     - Do not resolve local imports                                                            
  --only           <deps>          - Check specified dependencies                                                            
  --pre-commit     <tasks>         - Run tasks before each commit                        (Depends: --commit)                 
  --prefix         <prefix>        - Prefix for commit messages                          (Depends: --commit)                 
  --prefix-lock    <prefix>        - Prefix for commit messages of updating a lock file  (Depends: --commit, --unstable-lock)
  --unstable-lock  [file]          - Enable unstable updating of a lock file                                                 

"
`;

snapshot[`cli - "molt" 2`] = `
"  error: Missing argument(s): modules

"
`;

snapshot[`cli - "molt --help" 1`] = `
"
Usage: molt <modules...>

Description:

  Check updates to dependencies in Deno modules and configuration files

Options:

  -h, --help                       - Show this help.                                                                         
  -v, --version                    - Print version info                                                                      
  -w, --write                      - Write changes to local files                        (Conflicts: --commit)               
  -c, --commit                     - Commit changes to local git repository              (Conflicts: --write)                
  --changelog      [commit_types]  - Show a curated changelog for each update                                                
  --debug                          - Print debug information                                                                 
  --import-map     <file>          - Specify import map file                                                                 
  --ignore         <deps>          - Ignore dependencies                                                                     
  --no-resolve                     - Do not resolve local imports                                                            
  --only           <deps>          - Check specified dependencies                                                            
  --pre-commit     <tasks>         - Run tasks before each commit                        (Depends: --commit)                 
  --prefix         <prefix>        - Prefix for commit messages                          (Depends: --commit)                 
  --prefix-lock    <prefix>        - Prefix for commit messages of updating a lock file  (Depends: --commit, --unstable-lock)
  --unstable-lock  [file]          - Enable unstable updating of a lock file                                                 

"
`;

snapshot[`cli - "molt --help" 2`] = `""`;

snapshot[`cli - "molt --version" 1`] = `
"0.18.2
"
`;

snapshot[`cli - "molt --version" 2`] = `""`;

snapshot[`cli - "molt not_exist.ts" 1`] = `""`;

snapshot[`cli - "molt not_exist.ts" 2`] = `
'Error: Path does not exist: "not_exist.ts"
'
`;

snapshot[`cli - "molt import.ts" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
"
`;

snapshot[`cli - "molt import.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt jsr.ts" 1`] = `
"📦 @std/assert 0.210.0 => 0.218.2
"
`;

snapshot[`cli - "molt jsr.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt mod.ts" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3
"
`;

snapshot[`cli - import_map - "molt mod.ts" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt mod.ts --import-map deno.json" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3
"
`;

snapshot[`cli - import_map - "molt mod.ts --import-map deno.json" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore node-emoji" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore node-emoji" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore=deno_graph,node-emoji" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
"
`;

snapshot[`cli - "molt multiple_imports.ts --ignore=deno_graph,node-emoji" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land/std" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land/std" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only=deno.land/std,deno_graph" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
"
`;

snapshot[`cli - "molt multiple_imports.ts --only=deno.land/std,deno_graph" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land --ignore deno_graph" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
"
`;

snapshot[`cli - "molt multiple_imports.ts --only deno.land --ignore deno_graph" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
  lib.ts
  mod.ts
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
  mod.ts
📦 node-emoji 2.0.0 => 2.1.3
  mod.ts

💾 lib.ts
💾 mod.ts
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --write" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
  lib.ts
  mod.ts
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
  mod.ts
📦 node-emoji 2.0.0 => 2.1.3
  mod.ts

📝 bump deno.land/std from 0.200.0 to 0.218.2
📝 bump deno.land/x/deno_graph from 0.50.0 to 0.69.7
📝 bump node-emoji from 2.0.0 to 2.1.3
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --prefix :package:" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
  lib.ts
  mod.ts
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
  mod.ts
📦 node-emoji 2.0.0 => 2.1.3
  mod.ts

📝 :package: bump deno.land/std from 0.200.0 to 0.218.2
📝 :package: bump deno.land/x/deno_graph from 0.50.0 to 0.69.7
📝 :package: bump node-emoji from 2.0.0 to 2.1.3
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --prefix :package:" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --pre-commit=fmt" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
  lib.ts
  mod.ts
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
  mod.ts
📦 node-emoji 2.0.0 => 2.1.3
  mod.ts

💾 bump deno.land/std from 0.200.0 to 0.218.2
🔨 Running task fmt...
📝 bump deno.land/std from 0.200.0 to 0.218.2

💾 bump deno.land/x/deno_graph from 0.50.0 to 0.69.7
🔨 Running task fmt...
📝 bump deno.land/x/deno_graph from 0.50.0 to 0.69.7

💾 bump node-emoji from 2.0.0 to 2.1.3
🔨 Running task fmt...
📝 bump node-emoji from 2.0.0 to 2.1.3
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --commit --pre-commit=fmt" 2`] = `
"Checking for updates
Checked 2 files
Checked 2 files
Checked 2 files
"
`;

snapshot[`cli - import_map - "molt deno.json" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3
"
`;

snapshot[`cli - import_map - "molt deno.json" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt deno.json --write" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3

💾 deno.json
"
`;

snapshot[`cli - import_map - "molt deno.json --write" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - import_map - "molt deno.json --commit" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3

📝 bump @luca/flag from 1.0.0 to 1.0.1
📝 bump deno.land/std from 0.200.0 to 0.218.2
📝 bump deno.land/x/deno_graph from 0.50.0 to 0.69.7
📝 bump node-emoji from 2.0.0 to 2.1.3
"
`;

snapshot[`cli - import_map - "molt deno.json --commit" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc --write" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3

💾 deno.jsonc
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc --write" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc --commit" 1`] = `
"📦 @luca/flag 1.0.0 => 1.0.1
📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3

📝 bump @luca/flag from 1.0.0 to 1.0.1
📝 bump deno.land/std from 0.200.0 to 0.218.2
📝 bump deno.land/x/deno_graph from 0.50.0 to 0.69.7
📝 bump node-emoji from 2.0.0 to 2.1.3
"
`;

snapshot[`cli - jsonc - "molt deno.jsonc --commit" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock not_exist.lock" 1`] = `""`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock not_exist.lock" 2`] = `
"Checking for updates
Error: No such file or directory (os error 2): readfile 'not_exist.lock'
"
`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock" 1`] = `
"📦 @core/match 0.1.0 => 0.1.9
  deno.lock
📦 deno.land/std 0.200.0 => 0.218.2
  deno.json
  deno.lock
📦 hono 3.0.0 => 3.12.12
  deno.lock
"
`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock --write" 1`] = `
"📦 @core/match 0.1.0 => 0.1.9
  deno.lock
📦 deno.land/std 0.200.0 => 0.218.2
  deno.json
  deno.lock
📦 hono 3.0.0 => 3.12.12
  deno.lock

💾 deno.json
💾 deno.lock
"
`;

snapshot[`cli - lockfile - "molt deno.json --unstable-lock --write" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - lockfile - "molt deno.json --commit --unstable-lock --prefix :package: --prefix-lock :lock:" 1`] = `
"📦 @core/match 0.1.0 => 0.1.9
  deno.lock
📦 deno.land/std 0.200.0 => 0.218.2
  deno.json
  deno.lock
📦 hono 3.0.0 => 3.12.12
  deno.lock

📝 :lock: bump @core/match from 0.1.0 to 0.1.9
📝 :package: bump deno.land/std from 0.200.0 to 0.218.2
📝 :lock: bump hono from 3.0.0 to 3.12.12
"
`;

snapshot[`cli - lockfile - "molt deno.json --commit --unstable-lock --prefix :package: --prefix-lock :lock:" 2`] = `
"Checking for updates
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --no-resolve" 1`] = `
"📦 deno.land/std 0.200.0 => 0.218.2
📦 deno.land/x/deno_graph 0.50.0 => 0.69.7
📦 node-emoji 2.0.0 => 2.1.3
"
`;

snapshot[`cli - multiple_modules - "molt mod.ts --no-resolve" 2`] = `
"Checking for updates
"
`;
